--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
         "postcss": "^8.1.14",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
+    },
+    "dependencies": {
+        "react-router-dom": "^6.2.1"
     }
 }
