--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
         "react-dom": "^17.0.2"
     },
     "dependencies": {
+        "@emotion/react": "^11.8.1",
+        "@emotion/styled": "^11.8.1",
+        "@mui/icons-material": "^5.4.2",
+        "@mui/material": "^5.4.3",
         "react-router-dom": "^6.2.1"
     }
 }
