Started implementing create form, with formik and material ui, installed also yup for schema validation

--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,6 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 RECORDS_PER_PGE=50
+
+MIX_REACT_APP_SERVER_DOMAIN=
+MIX_REACT_APP_SERVER_API="${MIX_REACT_APP_SERVER_DOMAIN}/api"
