--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@emotion/react": "^11.8.1",
         "@emotion/styled": "^11.8.1",
         "@mui/icons-material": "^5.4.2",
+        "@mui/lab": "^5.0.0-alpha.70",
         "@mui/material": "^5.4.3",
         "formik": "^2.2.9",
         "react-router-dom": "^6.2.1",
