--- a/.env.example
+++ b/.env.example
@@ -51,7 +51,9 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-RECORDS_PER_PGE=50
+RECORDS_PER_PAGE=50
 
 MIX_REACT_APP_SERVER_DOMAIN=
 MIX_REACT_APP_SERVER_API="${MIX_REACT_APP_SERVER_DOMAIN}/api"
+
+SCOUT_DRIVER=
